# war-challenge-ml

./: .gitignore  README.md  pyproject.toml
war_challenge_ml/: main.ipynb  main.py  tests.ipynb
war_challenge_ml/prompt_engineers/: prompt.ipynb
war_challenge_ml/scripts/: army.py  objectives.py  player.py  state.py
