[tool.poetry]
name = "war-challenge-ml"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"
packages = [
    { include = "war_challenge_ml" },
    { include = "../war-challenge-computer-vision/war_challenge_computer_vision" },
]

[tool.poetry.dependencies]
python = "^3.11"
war-challenge-computer-vision = { path = "../war-challenge-computer-vision", develop = true }
ipykernel = "^6.25.1"
unidecode = "^1.3.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
