[tool.poetry]
name = "war-challenge-ml"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"
packages = [
    { include = "war_challenge_ml" },
    { include = "../war-challenge-computer-vision/war_challenge_computer_vision" },
]

[tool.poetry.dependencies]
python = "^3.11"
war-challenge-computer-vision = { path = "../war-challenge-computer-vision", develop = true }
ipykernel = "^6.25.1"
unidecode = "^1.3.6"
easyocr = "^1.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-gpu-amd"
url = "https://download.pytorch.org/whl/rocm5.4.2"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-gpu-cuda-12"
url = "https://download.pytorch.org/whl/nightly/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
